tendenci/core/base/static/css/admin_menu.css
/* ... */
@media print {
	#admin-bar,#bottom-admin-bar {
		display:none;
	}

	body.admin-bar {
		margin-top: 0 !important;
	}
}

/********************************************
* New styles for the new admin bar
*********************************************/


.t-top-nav {
    min-height: 30px;
    z-index: 9999999 !important;
}

.t-top-nav .navbar-header {
    min-height: 30px;
    height: 30px;
}

.t-top-nav .navbar-toggle {
    margin-top: 2px;
    margin-bottom: 2px;
    padding: 5px 10px;
}

.t-top-nav .navbar-brand {
    height: 30px;
}

.t-top-nav .dropdown-menu {
    max-width: 1170px;
}

.t-top-nav .yamm-content > .row > ul {
    margin: 0 !important;
}

.t-top-nav a {
    text-transform: none !important;
    font-size: 12px;
}

.t-top-nav .content-head a {
    font-weight: bold;
    font-size: 18px;
    padding: 4px 0;
}

.t-top-nav .inner-top-nav > li > a {
    padding: 5px 15px !important;
}

.t-top-nav .app-name {
    min-width: 150px;
    max-width: 200px;
}

.t-top-nav .app-name a {
    padding: 4px 0;
}

.t-top-nav .strong {
    font-weight: bold;
}

.t-top-nav .app-button {
    padding: 4px 5px;
}

.t-top-nav .app-list li {
    padding: 0;
}
.t-top-nav .custom-yamm-content {
    padding:0 20px;
}

.t-top-nav .navbar-nav {
    margin: 0;
}

.t-top-nav .nav-logo {
    position: relative;
    bottom: 12px;
}

.t-top-nav .classic {
    padding: 5px 15px;
}

.t-top-nav .lang-scrollable-menu {
    height: auto;
    max-height: 500px;
    overflow-x: hidden;
}

.t-top-nav .navbar-form {
    margin:2px 0;
}

.t-top-nav .navbar-form input.form-control {
    height: 26px;
}

.t-top-nav .inner-top-nav {
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}
.t-top-nav .inner-top-nav > li > a {
  position: relative;
  display: block;
  padding: 10px 15px;
}
.t-top-nav .inner-top-nav > li > a:hover,
.t-top-nav .inner-top-nav > li > a:focus {
  text-decoration: none;
}
.t-top-nav .inner-top-nav > li.disabled > a {
  color: #777;
}
.t-top-nav .inner-top-nav > li.disabled > a:hover,
.t-top-nav .inner-top-nav > li.disabled > a:focus {
  color: #777;
  text-decoration: none;
  cursor: not-allowed;
  background-color: transparent;
}
.t-top-nav .inner-top-nav .open > a,
.t-top-nav .inner-top-nav .open > a:hover,
.t-top-nav .inner-top-nav .open > a:focus {
  border-color: #428bca;
}
.t-top-nav .inner-top-nav .nav-divider {
  height: 1px;
  margin: 9px 0;
  overflow: hidden;
  background-color: #e5e5e5;
}
.t-top-nav .inner-top-nav > li > a > img {
  max-width: none;
}


@media (max-width: 992px) {
    .t-top-nav .inner-top-nav > li > a {
        padding: 5px !important;
    }

    .t-top-nav .navbar-form input.form-control {
        width: 80%;
    }
}


@media (max-width:767px) {
    .t-top-nav  a {
        text-shadow: none;
        color: #999999 !important;
    }

    .t-top-nav a:hover {
        background: none !important;
        color: #fff !important;
    }

    .t-top-nav .content-item {
        width: 100%;
    }
    .t-top-nav .app-name {
        max-width: 100%;
        width: 50%;
    }

    .t-top-nav .lang-scrollable-menu {
        max-height: none;
        width: 100% !important;
        overflow-x: inherit !important;
    }

    .t-top-nav .navbar-form input.form-control {
        width: 100%;
    }
}

@media (min-width: 768px) {
    .content-dropdown {
        width: 510px;
    }

    .people-dropdown {
        width: 275px;
    }
}

